--- a/index.html
+++ b/index.html
@@ -3,138 +3,97 @@
 <head>
 <meta charset="UTF-8">
 <title>💖 Valentine</title>
+
 <style>
-  body {
-    margin: 0;
-    height: 100vh;
-    overflow: hidden;
-    background: linear-gradient(135deg, #ffb6c1, #ffe4ec);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: "Kanit", "Comic Sans MS", sans-serif;
-  }
+body {
+  margin: 0;
+  height: 100vh;
+  overflow: hidden;
+  background: linear-gradient(135deg, #ffb6c1, #ffe4ec);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Kanit", sans-serif;
+}
 
-  /* แถบแจ้งเตือน */
-  .notice {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    background: #ff4f87;
-    color: white;
-    text-align: center;
-    padding: 10px;
-    font-size: 14px;
-    z-index: 999;
-  }
+.card {
+  background: #fff;
+  padding: 40px 30px;
+  border-radius: 25px;
+  text-align: center;
+  width: 90%;
+  max-width: 360px;
+  box-shadow: 0 15px 35px rgba(0,0,0,0.15);
+  z-index: 10;
+  animation: pop 0.5s ease;
+}
 
-  .notice button {
-    margin-left: 10px;
-    background: white;
-    color: #ff4f87;
-    border: none;
-    border-radius: 20px;
-    padding: 5px 12px;
-    cursor: pointer;
-    font-weight: bold;
-  }
+@keyframes pop {
+  from { transform: scale(0.85); opacity: 0; }
+  to { transform: scale(1); opacity: 1; }
+}
 
-  .card {
-    background: white;
-    padding: 40px 30px;
-    border-radius: 25px;
-    text-align: center;
-    box-shadow: 0 15px 35px rgba(0,0,0,0.15);
-    width: 90%;
-    max-width: 360px;
-    z-index: 10;
-    animation: pop 0.6s ease;
-    margin-top: 40px;
-  }
+h1 {
+  color: #ff4f87;
+  font-size: 26px;
+  margin-bottom: 25px;
+}
 
-  @keyframes pop {
-    from { transform: scale(0.85); opacity: 0; }
-    to { transform: scale(1); opacity: 1; }
-  }
+button {
+  background: #ff4f87;
+  color: white;
+  border: none;
+  border-radius: 30px;
+  padding: 12px 26px;
+  font-size: 18px;
+  cursor: pointer;
+  margin: 8px;
+  transition: 0.3s;
+}
 
-  h1 {
-    color: #ff4f87;
-    margin-bottom: 25px;
-    font-size: 26px;
-  }
+button:hover {
+  transform: scale(1.08);
+}
 
-  button {
-    background: #ff4f87;
-    color: white;
-    border: none;
-    border-radius: 30px;
-    padding: 12px 26px;
-    font-size: 18px;
-    cursor: pointer;
-    margin: 8px;
-    transition: 0.3s;
-  }
+.no {
+  background: #ccc;
+  color: #555;
+  position: absolute;
+}
 
-  button:hover {
-    background: #ff2f70;
-    transform: scale(1.05);
-  }
+.heart {
+  font-size: 42px;
+  margin-bottom: 15px;
+  animation: beat 1s infinite;
+}
 
-  .no {
-    background: #ccc;
-    color: #555;
-    position: absolute;
-  }
+@keyframes beat {
+  0% { transform: scale(1); }
+  50% { transform: scale(1.2); }
+  100% { transform: scale(1); }
+}
 
-  .heart {
-    font-size: 42px;
-    margin-bottom: 15px;
-    animation: beat 1s infinite;
-  }
+.floating-heart {
+  position: absolute;
+  bottom: -40px;
+  font-size: 24px;
+  animation: floatUp 6s linear infinite;
+  opacity: 0.8;
+}
 
-  @keyframes beat {
-    0% { transform: scale(1); }
-    50% { transform: scale(1.2); }
-    100% { transform: scale(1); }
-  }
-
-  .floating-heart {
-    position: absolute;
-    bottom: -50px;
-    font-size: 24px;
-    animation: floatUp 6s linear infinite;
-    opacity: 0.8;
-  }
-
-  @keyframes floatUp {
-    from { transform: translateY(0) scale(1); opacity: 1; }
-    to { transform: translateY(-120vh) scale(1.5); opacity: 0; }
-  }
-
-  /* ซ่อน YouTube */
-  #ytPlayer {
-    width: 0;
-    height: 0;
-    border: 0;
-  }
+@keyframes floatUp {
+  from { transform: translateY(0) scale(1); opacity: 1; }
+  to { transform: translateY(-120vh) scale(1.6); opacity: 0; }
+}
 </style>
 </head>
 
 <body>
 
-<!-- แถบแจ้งเตือน -->
-<div class="notice">
-  🔊 แนะนำให้เปิดในเบราว์เซอร์เพื่อให้มีเสียงเพลง
-  <button onclick="openBrowser()">เปิดในเบราว์เซอร์</button>
-</div>
-
-<!-- เพลง YouTube -->
-<iframe
-  id="ytPlayer"
-  src=""
-  allow="autoplay">
-</iframe>
+<!-- เพลง -->
+<audio id="bgMusic" loop>
+  <source src="เพื่อนรัก.mp3" type="audio/mpeg">
+</audio>
 
 <div class="card" id="card">
   <div class="heart">💝</div>
@@ -143,79 +102,76 @@
 </div>
 
 <script>
-  let step = 0;
-  let musicStarted = false;
+let step = 0;
+let musicStarted = false;
 
-  const texts = [
-    "ผมมีอะไรจะบอกคุณ",
-    "จะบอกละน้าา",
-    "จะบอกละน้าา",
-    "เป็นแฟนกันมั้ยย 💕"
-  ];
+const texts = [
+  "ผมมีอะไรจะบอกคุณ",
+  "จะบอกละน้าา",
+  "จะบอกละน้าา",
+  "เป็นแฟนกันมั้ยย 💕"
+];
 
-  function openBrowser() {
-    window.open(window.location.href, "_blank");
+function startMusic() {
+  if (!musicStarted) {
+    const music = document.getElementById("bgMusic");
+    music.volume = 0.8;
+    music.play();
+    musicStarted = true;
   }
+}
 
-  function startMusic() {
-    if (!musicStarted) {
-      document.getElementById("ytPlayer").src =
-        "https://www.youtube.com/embed/EPZfaGPP3cA?autoplay=1&loop=1&playlist=EPZfaGPP3cA";
-      musicStarted = true;
-    }
-  }
+function next() {
+  startMusic();
+  const card = document.getElementById("card");
 
-  function next() {
-    startMusic();
-    const card = document.getElementById("card");
-
-    if (step < texts.length - 1) {
-      card.innerHTML = `
-        <div class="heart">💖</div>
-        <h1>${texts[step]}</h1>
-        <button onclick="next()">ถัดไป ➜</button>
-      `;
-      step++;
-    } else {
-      card.innerHTML = `
-        <div class="heart">💘</div>
-        <h1>${texts[step]}</h1>
-        <button onclick="yes()">ตกลง 💕</button>
-        <button class="no" id="noBtn"
-          onmouseover="escapeNo()"
-          onclick="escapeNo()">ไม่ตกลง 🙈</button>
-      `;
-    }
-  }
-
-  function escapeNo() {
-    const btn = document.getElementById("noBtn");
-    const x = Math.random() * (window.innerWidth - 100);
-    const y = Math.random() * (window.innerHeight - 100);
-    btn.style.left = x + "px";
-    btn.style.top = y + "px";
-  }
-
-  function yes() {
-    document.getElementById("card").innerHTML = `
-      <div class="heart">💞</div>
-      <h1>เย้! เราเป็นแฟนกันแล้วนะ 🥰</h1>
-      <p style="color:#555;font-size:18px;">
-        ขอบคุณที่รักในสิ่งที่ผมเป็นนะครับบ 💖
-      </p>
+  if (step < texts.length - 1) {
+    card.innerHTML = `
+      <div class="heart">💖</div>
+      <h1>${texts[step]}</h1>
+      <button onclick="next()">ถัดไป ➜</button>
+    `;
+    step++;
+  } else {
+    card.innerHTML = `
+      <div class="heart">💘</div>
+      <h1>${texts[step]}</h1>
+      <button onclick="yes()">ตกลง 💕</button>
+      <button class="no" id="noBtn"
+        onmouseover="escapeNo()"
+        onclick="escapeNo()">ไม่ตกลง 🙈</button>
     `;
   }
+}
 
-  /* หัวใจลอย */
-  setInterval(() => {
-    const heart = document.createElement("div");
-    heart.className = "floating-heart";
-    heart.innerText = "💖";
-    heart.style.left = Math.random() * 100 + "vw";
-    heart.style.animationDuration = (Math.random() * 3 + 4) + "s";
-    document.body.appendChild(heart);
-    setTimeout(() => heart.remove(), 7000);
-  }, 400);
+function escapeNo() {
+  const btn = document.getElementById("noBtn");
+  const x = Math.random() * (window.innerWidth - 100);
+  const y = Math.random() * (window.innerHeight - 100);
+  btn.style.left = x + "px";
+  btn.style.top = y + "px";
+}
+
+function yes() {
+  document.getElementById("card").innerHTML = `
+    <div class="heart">💞</div>
+    <h1>เย้! เราเป็นแฟนกันแล้วนะ 🥰</h1>
+    <p style="font-size:18px;color:#555;">
+      ขอบคุณที่รักในสิ่งที่ผมเป็นนะครับบ 💖
+    </p>
+  `;
+}
+
+/* หัวใจลอย */
+setInterval(() => {
+  const heart = document.createElement("div");
+  heart.className = "floating-heart";
+  heart.innerText = "💖";
+  heart.style.left = Math.random() * 100 + "vw";
+  heart.style.animationDuration = (Math.random() * 3 + 4) + "s";
+  document.body.appendChild(heart);
+  setTimeout(() => heart.remove(), 7000);
+}, 350);
 </script>
 
 </body>
